# scancontext-pybind

./: .gitignore  CMakeLists.txt  README.md  build_within_docker.sh
docker/: docker_run.sh
examples/: ScanContextManagerCPP.py  test_batch_scd_saver.py  test_compare_scd.py  test_make_desciptor.py  test_single_session_online_place_recognition.py  test_utils.py
examples/data/: KITTI_SCD_download_link.txt
python/: CMakeLists.txt  setup.py.in  wrapper.cpp
python/scancontext/: wrapper.cpp
scancontext/: CMakeLists.txt
scancontext/include/scancontext/: Scancontext.cpp  Scancontext.h
tests/: README.md  test_make_desciptor.py
